úpravy: call s Mílou

--- a/almanach-2024/almanach-2024.tex
+++ b/almanach-2024/almanach-2024.tex
@@ -875,9 +875,8 @@ z~místa (310 cm) a druhý ve skoku vysokém z~místa (114 cm). V~běhu
 rozestavném (štafetě) bylo naše družstvo třetí. Dorostenky závodily
 v~odbíjené a ve štafetě. Prostná jich cvičilo 69.
 
-\medskip
-Ve hlavních sletových dnech:
-\medskip
+\smallskip
+\noindent V hlavních sletových dnech:
 
 \noindent
 3.~7. cvičilo naše žactvo a dorost ve velkém počtu
@@ -1058,17 +1057,16 @@ cvičišti v~Libni s~ukázkami cvičení sletových. Župní slet byl 5.~6.
 v~Lysé nad Labem. Náš dorost se zúčastnil sletových plaveckých závodů a
 župních závodů v~atletice. \par}
 
-\medskip
-Hlavní činnost se soustředila na vlastní slet:
-\medskip
+\smallskip
+\noindent Hlavní činnost se soustředila na vlastní slet:
 
-16.~6. den brannosti (naše účast 160)
+\noindent 16.~6. den brannosti (naše účast 160)
 
-19.~6. průvod žactva
+\noindent 19.~6. průvod žactva
 
-20.~6. slet žactva (279 žáků a podobný počet žákyň).
+\noindent 20.~6. slet žactva (279 žáků a podobný počet žákyň).
 
-\medskip
+\smallskip
 Také náš dorost měl velký podíl na úspěchu sletu. Prostná mužů cvičilo
 106 mužů, ženy vystupovaly třikrát, průměrně 150 žen. Naše účast
 v~průvodech žactva, dorostu i členstva byla vždy veliká, nechceme však
@@ -1127,7 +1125,7 @@ jeden den před naším osvobozením. Na ně nesmíme zapomínat.
 
 \subsection{Sokolské oběti nacistické okupace v~Libni}
 
-\textbf{Vojta Vacín} (nar. 16.~7. 1887), náčelník župy Barákovy,
+\hspace*{\parindent}\textbf{Vojta Vacín} (nar. 16.~7. 1887), náčelník župy Barákovy,
 dlouholetý náčelník libeňské jednoty, od svého mládí nadšený cvičenec.
 Umučen v~koncentračním táboře v~Osvětimi 17.~5. 1942 (55 roků).
 
@@ -1186,32 +1184,32 @@ Ludvík Holý stav členstva včetně dorostu a žactva celkem 2\,889 duší,
 z~toho 1\,303 dospělých, 430 dorostu a 1\,156 žactva. Starostou byl Dr.
 Štross, náčelníkem Jar. Jirák, náčelnicí B. Votýpková.
 
-V~roce 1945 byl zvolen výbor naší jednoty s~těmito funkcemi:
-
 \medskip
-Jiří Štross -- starosta
+\noindent V~roce 1945 byl zvolen výbor naší jednoty s~těmito funkcemi:
 
-Sláva Veger -- místostarosta
+\noindent Jiří Štross -- starosta
 
-Bohumil Andrle -- jednatel
+\noindent Sláva Veger -- místostarosta
 
-Josef Mrklas -- pokladník
+\noindent Bohumil Andrle -- jednatel
 
-Ludvík Holý -- matrikář
+\noindent Josef Mrklas -- pokladník
 
-Helena Andrlová -- vzdělavatel
+\noindent Ludvík Holý -- matrikář
 
-Jan Koubek -- správce sokolovny
+\noindent Helena Andrlová -- vzdělavatel
 
-Jaroslav Kubišta -- správce osvětlení
+\noindent Jan Koubek -- správce sokolovny
 
-Miroslav Procházka -- archivář
+\noindent Jaroslav Kubišta -- správce osvětlení
 
-Jindra Vajkrt -- vedoucí pořadatelského sboru
+\noindent Miroslav Procházka -- archivář
 
-Jaroslav Jirák -- náčelník
+\noindent Jindra Vajkrt -- vedoucí pořadatelského sboru
 
-Boženka Votýpková -- náčelnice
+\noindent Jaroslav Jirák -- náčelník
+
+\noindent Boženka Votýpková -- náčelnice
 \medskip
 
 Výbor sokolské jednoty na své první schůzi v~roce 1945 stanovil program
@@ -1666,37 +1664,37 @@ náčelnice ZTV Miloslava Štěpánková naše ženy-sokolky. Jedněm ani druhý
 se to moc nelíbilo -- každý ale musel něco ze svého slevit. Ustavující
 schůze nového odboru Sokol se konala 3.~února 1969 a byl zvolen výbor
 v~tomto složení:
-% TODO chce Míla odstranit mezeru?
-\medskip
-předseda: Josef Kříž (1926)
+\smallskip
 
-místopředseda: Ing. Jiří Polanecký (1934)
+\noindent předseda: Josef Kříž (1926)
 
-náčelník : Ing. Václav Ďoubal (1933)
+\noindent místopředseda: Ing. Jiří Polanecký (1934)
 
-místonáčelník: František Kodl (1909)
+\noindent náčelník : Ing. Václav Ďoubal (1933)
 
-jednatel: Josef Rusý (1922)
+\noindent místonáčelník: František Kodl (1909)
 
-vzdělavatel: Miroslav Hokův (1929)
+\noindent jednatel: Josef Rusý (1922)
 
-metodik: Dr. Jiří Štěpnička (1924)
+\noindent vzdělavatel: Miroslav Hokův (1929)
 
-náčelnice: Věra Decastellová (1919)
+\noindent metodik: Dr. Jiří Štěpnička (1924)
 
-hospodář: Otakar Kačer (1915)
+\noindent náčelnice: Věra Decastellová (1919)
 
-zdravotník: MUDr. Alena Nevařilová (1925)
+\noindent hospodář: Otakar Kačer (1915)
 
-soutěže: Otakar Zima (1936)
+\noindent zdravotník: MUDr. Alena Nevařilová (1925)
 
-tělovýchovná vystoupení: Jindřich Vondrášek (1935)
+\noindent soutěže: Otakar Zima (1936)
 
-bez funkce: Miroslav Tůma (1921), Jiří Pospíchal (1935), Alena Vávrů (1934)
+\noindent tělovýchovná vystoupení: Jindřich Vondrášek (1935)
 
-Z~původního výboru ZTV zůstali: Polanecký, Ďoubal, Vondrášek a Zima.
+\noindent bez funkce: Miroslav Tůma (1921), Jiří Pospíchal (1935), Alena Vávrů (1934)
 
-\medskip
+\noindent Z~původního výboru ZTV zůstali: Polanecký, Ďoubal, Vondrášek a Zima.
+
+\smallskip
 
 První členská beseda 7.~března 1969 byla věnována prvnímu prezidentovi
 T.~G. Masarykovi a již 19.~března zahájil metodik Dr.~Jiří Štěpnička
@@ -1853,19 +1851,18 @@ Program slavnostní akademie ke 100. výročí založení jednoty se
 skládal z~následujících vystoupení:
 %TODO co takhle?
 \smallskip
-Cvičení dříve a dnes -- ml. žáci, autor F. Kodl
 
-Když se míč schová v~síťce -- ml. žákyně, vedoucí J. Hovorková
+\noindent Cvičení dříve a dnes -- ml. žáci, autor F. Kodl
 
-Cvičení na třech hrazdách -- st. žáci TJ Slavoj Praha 7, autor Dr.
-Kašák (Slavoj také slavil 100. výročí)
+\noindent Když se míč schová v~síťce -- ml. žákyně, vedoucí J. Hovorková
 
-Mládí -- radost -- pohyb -- st. žákyně, ved. J. Hovorková
+\noindent Cvičení na třech hrazdách -- st. žáci TJ Slavoj Praha 7, autor Dr.~Kašák (Slavoj také slavil 100. výročí)
 
-{\sloppy Mládí v~Moderní gymnastice -- dívky, ved. Eva Foglová (komponováno k~25.~výročí MG) \par}
+\noindent Mládí -- radost -- pohyb -- st. žákyně, ved. J. Hovorková
 
-Pódiová skladba s~lentou (\pozned{se stuhou, pozn. ed.}) -- dívky MG,
-ved. Eva Foglová
+\noindent {\sloppy Mládí v~Moderní gymnastice -- dívky, ved. Eva Foglová (komponováno k~25.~výročí MG) \par}
+
+\noindent Pódiová skladba s~lentou (\pozned{se stuhou, pozn. ed.}) -- dívky MG, ved. Eva Foglová
 
 \smallskip
 Po přestávce byly udělovány slavnostní plakety zasloužilým tělovýchovným
@@ -1875,17 +1872,17 @@ Beránek, archivář Adolf Peťule, matrikář Ludvík Holý a jiní. Mnoho
 vyznamenaných bylo z~TJ Meteor a také mnozí činovníci našeho odboru,
 tehdy již odboru ZRTV (Základní a rekreační tělesné výchovy).
 
-Tělocvičná část slavnostní akademie pokračovala:
+\smallskip
+\noindent Tělocvičná část slavnostní akademie pokračovala:
 
-\medskip
-Aerobik -- ženy MG, ved. Eva Foglová a Tamara Janů
+\noindent Aerobik -- ženy MG, ved. Eva Foglová a Tamara Janů
 
-Radost z~pohybu -- ženy ZRTV, ved. Věra Decastellová
+\noindent Radost z~pohybu -- ženy ZRTV, ved. Věra Decastellová
 
-Rytmus mládí -- mladí cvičitelé, autoři naši hosté Luboš Čapeka a
+\noindent Rytmus mládí -- mladí cvičitelé, autoři naši hosté Luboš Čapeka a
 Dana Rádová (vítězná skladba ze soutěže pódiovek 1982 v~Žilině)
 
-\medskip
+\smallskip
 Slavnostní schůze se konala 24.~října 1984 ve velkém sále libeňské
 sokolovny za účasti mnoha čelných představitelů obce, tělovýchovných i
 jiných organizací. Také zde byli vyznamenáni další pracovníci
@@ -2872,7 +2869,7 @@ jednot soutěž zanikla.
 
 {\sloppy Zde je přehled celoročních výsledků (ty vzniknou po sečtení příslušných 4~dnů v~daném roce); náš součet činil vždy okolo 200 skupinodnů: \par}
 
-%TODO odsadit jako tabulku - takhle?
+\vspace*{-6pt}
 \renewcommand{\arraystretch}{1}
 \begin{longtable}{l p{10.2cm}}
 1991 & 2. místo mezi 151 jednotami \\
@@ -3363,19 +3360,16 @@ prošla i hlavní trofej, cínová plastika sokolíka. Tu jsme nejprve
 nakupovali od výrobce od Liberce. Po skončení výroby jsem si vyrobil
 vlastní model na odlévání a asi 10 let jsme si je odlévali sami. Doba
 však postupuje, a tak nám letos krásné (plastové) sokolíky na 3D
-tiskárně zhotovil Ledňáček.
+tiskárně zhotovil Ledňáček. Zde je přehled o~účasti a hlavním vítězi napříč kategoriemi:
 
-\vspace*{\baselineskip}
-\noindent
-Zde je přehled o~účasti a hlavním vítězi napříč kategoriemi:
-%TODO nelíbí se mezera? Sekundy? (napříč)?
+\vspace*{-12pt}
 \begin{longtable}[]{%
   >{\raggedright\arraybackslash}p{1cm}%
   >{\raggedright\arraybackslash}p{1.2cm}%
   >{\raggedright\arraybackslash}p{1.2cm}%
   >{\raggedright\arraybackslash}p{1cm}%
   >{\raggedright\arraybackslash}p{4.5cm}}
-\textbf{Ročník} & \textbf{Rok} & \textbf{Celkem běžců} & \textbf{Vítězný čas [s]} & \textbf{Absolutní vítěz (napříč~kategoriemi)} \\
+\textbf{Ročník} & \textbf{Rok} & \textbf{Celkem běžců} & \textbf{Vítězný čas (s)} & \textbf{Absolutní vítěz (napříč~kategoriemi)} \\
 \hline \endhead
 0. & 2000 & 43 & 42,5 & Lukáš Pazdera – dorostenec \\
 1. & 2001 & 59 & 40,2 & Jan Kaše – muž \\
@@ -3637,9 +3631,8 @@ dělá. Já jsem se naopak zase lecčemus přiučil od nich. Díky.
 \hfill\textit{Jiří Novák, 2004 náčelník, 2024 starosta}
 
 \medskip
-Průměrná docházka žactva a dorostu v~letech 1990--2024:
-% TODO nelíbí se mezera?
-\medskip
+\noindent Průměrná docházka žactva a dorostu v~letech 1990--2024:
+
 \renewcommand*{\arraystretch}{1.1}
 \begin{longtable}[]{%
   >{\raggedright\arraybackslash}p{2cm}%
@@ -3897,7 +3890,18 @@ V~roce 2004 byl starostou zvolen Jiří Sixta (2004--2013),
 který mimo jiné zařídil novou plynovou kotelnu, za jeho starostování se
 znatelně zvýšila četnost žádostí o~granty, začalo pravidelné lakování
 parket. Po devíti letech už nečekaně nekandidoval a my jsme řešili post
-starosty. Nakonec padla volba na Nelibeňáka, ale člověka, kterého jsme
+starosty.
+
+\begin{figure*}[h!]
+  \centering 
+  \includegraphics[width=0.9\textwidth]{img/49_debrifink.JPG}
+  \caption*{Debrífink po slavnostní akademii k~výročí položení základního
+  kamene sokolovny (2009), vlevo: náčelnice ses. Milada Věra Decastellová,
+  uprostřed: starosta jednoty br. Jiří Sixta, vpravo náčelník ČOS Miroslav
+  Vrána, foto: archiv J. Přecha}
+\end{figure*}
+
+Nakonec padla volba na Nelibeňáka, ale člověka, kterého jsme
 dobře znali. Byl jím bývalý náčelník Sokola Malešice a župní hospodář
 Aleš Müller (2013--2019), který stál za sepsáním přání a
 nápadů k~vylepšení a rekonstrukcí sokolovny (více o~něm dále). Za něj
@@ -3942,15 +3946,6 @@ okolnostmi dotlačen stát se starostou. Josef Kubišta je tedy náčelníkem
 od roku 2019 dosud. S~ním přišla opět mladická invence a entuziasmus.
 Bylo obnoveno cvičení mužů, vznikly oddíly šplhu a přetahu lanem, vydal
 přes ČOS Sokolské pohádky, vidí další práce k~vylepšení sokolovny.\par}
-
-\begin{figure*}[h!]
-  \centering 
-  \includegraphics[width=0.9\textwidth]{img/49_debrifink.JPG}
-  \caption*{Debrífink po slavnostní akademii k~výročí položení základního
-  kamene sokolovny (2009), vlevo: náčelnice ses. Milada Věra Decastellová,
-  uprostřed: starosta jednoty br. Jiří Sixta, vpravo náčelník ČOS Miroslav
-  Vrána, foto: archiv J. Přecha}
-\end{figure*}
 
 K~dalším lidem v~čele jednoty patří jednatel -- ty první se mi dohledat
 nepodařilo. Od roku 2004 funkci zastávala Marta Halíková, od roku 2013
@@ -4032,7 +4027,9 @@ se přesunula z~nářaďovny do lodě a hudba se pouští z~CD nebo počítače
 přes zvukový mixážní pult. Hlavními hybateli těchto technických změn
 byli cvičitelé Vláďa a Pavel Voráčovi s~Martinem Chlumským (Čedokem). Ze
 všech akademií od roku 2004 máme též (skoro) profesionální videozáznamy
-díky nadšení a práci Standy Voráče (otce Vládi a Pavla). U~příležitosti % TODO chce odstavec?
+díky nadšení a práci Standy Voráče (otce Vládi a Pavla).
+
+U~příležitosti
 120. výročí jednoty jsme též rekonstruovali historickou skladbu žáků
 z~roku 1920, ke které jsme získali popis a notový zápis hudby pro klavírní
 doprovod. Skladbu jsme následně předváděli ještě např. u~příležitosti
@@ -6235,30 +6232,30 @@ vystupování "živáků". Nedílnou součástí našich představení je živá
 hudba, kterou vždy skládají a zároveň interpretují naši muzikanti.
 Všichni členové divadla kromě jiného tedy musí obstát ve zpěvu.
 
-Během více než deseti let jsme nazkoušeli celkem devět představení:
-% TODO mezera
-\medskip
-Vánoční hra (1993)
+\smallskip
+\noindent Během více než deseti let jsme nazkoušeli celkem devět představení:
 
-Havran (1994)
+\noindent Vánoční hra (1993)
 
-Cesta do Ertepelska (1995)
+\noindent Havran (1994)
 
-Vo Honzoj ze Hloty (1996)
+\noindent Cesta do Ertepelska (1995)
 
-Vánoční hra o~Jakubovi (1998)
+\noindent Vo Honzoj ze Hloty (1996)
 
-Sedmero krkavců (1999)
+\noindent Vánoční hra o~Jakubovi (1998)
 
-Posvícení v~Hudlicích (2002)
+\noindent Sedmero krkavců (1999)
 
-V~Betlémě není místo (2003)
+\noindent Posvícení v~Hudlicích (2002)
 
-Zkouška (2004)
+\noindent V~Betlémě není místo (2003)
 
-Mravenečník tanečník (2005)
+\noindent Zkouška (2004)
 
-\medskip
+\noindent Mravenečník tanečník (2005)
+
+\smallskip
 
 Během naší existence jsme celkem čtyřikrát hráli na Festivalu pražských
 loutkářů v~kobyliské Jiskře. Zde se nám jednou podařilo zvítězit a
@@ -6383,6 +6380,13 @@ repertoáru tvoří hudba 20. století. Sbor nastudoval mnoho premiérových
 skladeb předních českých skladatelů, z~nichž někteří svá díla sboru
 přímo věnovali (Zdeněk Lukáš, Vladimír Sommer).
 
+\begin{figure*}[b!]
+  \centering 
+  \includegraphics[width=0.9\textwidth]{img/86_fksp.jpg}
+  \caption*{Foerstrovo komorní pěvecké sdružení na festivalu v~Bielsko-Biale
+  2024, foto: archiv FKPS}
+\end{figure*}
+
 FKPS vyvíjí bohatou koncertní činnost nejen doma, ale i v~zahraničí.
 Koncertoval na významných domácích festivalech (Pražské jaro), na
 evropských sborových soutěžích dosáhl mnoha ocenění (Cork -- Irsko,
@@ -6399,13 +6403,6 @@ I~v~roce 2024 sbor stále zpívá i sbírá ocenění a úspěchy. Například
 nedávno přivezl vítězství ve dvou kategoriích (stejnohlasé sbory,
 seniorské sbory) z~19. mezinárodního festivalu sborů Gaude Cantem 2024
 v~Bielsko-Biale v~Polsku.
-
-\begin{figure*}[h]
-  \centering 
-  \includegraphics[width=0.9\textwidth]{img/86_fksp.jpg}
-  \caption*{Foerstrovo komorní pěvecké sdružení na festivalu v~Bielsko-Biale
-  2024, foto: archiv FKPS}
-\end{figure*}
 
 \section{Sokolská kapka krve}
 
