--- a/zpravy-commands.tex
+++ b/zpravy-commands.tex
@@ -1,7 +1,6 @@
 \usepackage[a5paper,left=2cm,right=1cm,top=1cm, bottom=1.5cm]{geometry}
 \usepackage{array}
 \usepackage{makecell}
-\usepackage{ulem}
 \usepackage[all]{nowidow}
 \usepackage{wrapfig}
 \usepackage{enumitem}
@@ -106,3 +105,9 @@
 
 \newcommand{\luv}{\clqq\kern-0.07em}
 \newcommand{\ruv}{\kern0.07em\crqq\kern0.1em}
+
+\usepackage{csquotes}
+\DeclareQuoteAlias{german}{czech}
+\MakeOuterQuote{"}
+
+\usepackage[normalem]{ulem}
