--- a/24-4/zpravy-2024-q4.tex
+++ b/24-4/zpravy-2024-q4.tex
@@ -40,18 +40,18 @@
 
 
 \begin{multicols}{2}
-  {\fontsize{48pt}{57pt} \fugner \color{sokolred} \noindent editorial}
+  {\huge \tyrs \noindent Editorial}
 
   \columnbreak
-
-  \vspace*{-4pt}
+ 
+  \vspace*{-14pt}
 
   {\hfill\textbf{Vít Jakoubek}}
 
   {\hfill\textbf{ editor Zpráv }}
 \end{multicols}
 
-\vspace*{12pt}
+% \vspace*{12pt}
 % \begin{center}
 %   \textbf{Krátké vzpomínání bývalého náčelníka}
 % \end{center}
@@ -81,13 +81,15 @@ Jménem výboru jednoty i jménem svým Vám i Vašim blízkým přeji příjemn
 \newgeometry{margin=1.5cm}
 
 
+
+\setlength{\columnsep}{-2.5cm}
 \begin{multicols}{2}
-  {\fontsize{48pt}{57pt} \fugner \color{sokolred} \noindent úvodník}
- 
+  {\fontsize{48pt}{57pt} \fugner \color{sokolred} \noindent Úvodník}
+
   \columnbreak
 
   \vspace*{-4pt}
- 
+
   {\hfill\textbf{Ondřej Gros}}
   
   {\hfill\textbf{starosta MČ Praha 8}}
@@ -124,22 +126,18 @@ S~pozdravem Nazdar!
 \pagestyle{uvodnik}
 \newgeometry{margin=1.5cm}
 
+\setlength{\columnsep}{-2.5cm}
 \begin{multicols}{2}
- {\fontsize{48pt}{57pt} \fugner \color{sokolred} \noindent úvodník}
+ {\huge \tyrs \noindent Vize bratra starosty}
 
  \columnbreak
 
- \vspace*{-4pt}
+ \vspace*{-14pt}
 
  {\hfill\textbf{Jiří Novák}}
  
  {\hfill\textbf{starosta}}
 \end{multicols}
-
-\vspace*{12pt}
-\begin{center}
-  \textbf{Vize bratra starosty}
-\end{center}
 
 \noindent
 Byl jsem osloven spolu s~dalšími osobami, abych sepsal krátkou stať o~svém prozatímním působení v~roli starosty a nastínil své případné další plány. Nu, je sice delší, ale zase z~ní budou mít radost naši následovníci, až budou hledat, co se kdy přihodilo.
