--- a/25-2-historicke/zpravy-2025-q2-historicke.tex
+++ b/25-2-historicke/zpravy-2025-q2-historicke.tex
@@ -1,6 +1,7 @@
 \documentclass[11pt]{article}
 
 \include{../zpravy-commands.tex}
+\usepackage{csquotes}
 
 % \usepackage{showframe}
 
@@ -103,7 +104,7 @@ Anka vybrala několik svázaných ročníků, z nichž jsem pak vybíral článk
 které jsem pak naskenoval.
 
 Výběr to tedy není rozhodně reprezentativní. Nicméně snažil jsem se
-vybrat jak texty k zamyšlení, tak texty veselé či jen ``nudná'' provozní
+vybrat jak texty k zamyšlení, tak texty veselé či jen \uv{nudná} provozní
 oznámení.
 
 Texty jsou řazeny chronologicky, bez dalších komentářů. Výsledný dojem
@@ -140,7 +141,7 @@ Přeji vám všem inspirativní čtení!
 \clearpage
 
 
-\post{????}
+\post{Slovo vzdělavatelky}
 
 \noindent
 Milé čtenářstvo,
@@ -172,9 +173,9 @@ uloženy ve vitríně s jeho jmenovkou ve sborovně, a najednou jsem měla
 před očima celý příběh a onen anonymní cvičitel dostal tvář a charakter,
 když mi oči letěly po řádcích pohřební řeči bratra Štrosse.
 
-„A je zvláštní náhodou, že kamenné poprsí br. Filipa nad jeho hrobem na
+\uv{A je zvláštní náhodou, že kamenné poprsí br. Filipa nad jeho hrobem na
 hřbitově libeňském vzhlíží svojí kamennou tváří ku hrobu bratra
-Štekra\ldots`` A ve větvích stromu, který se nad hrobem sklání, se
+Štekra\ldots} A ve větvích stromu, který se nad hrobem sklání, se
 skrývá a Vojtův klid stráží kamenný sokol sedící na náhrobním kameni. Už
 95 let\ldots{}
 
@@ -231,7 +232,7 @@ inspirací.
 
 
 
-\clearpage
+% \clearpage
 
 1928, ročník 2, číslo 2, strana 19 \\
 \includegraphics[width=\imagewidth]{original/1928/Skener_20250320.jpg}
@@ -247,7 +248,7 @@ inspirací.
 
 
 
-\clearpage
+% \clearpage
 
 1929, ročník 3,číslo 3, strana 31 \\
 \includegraphics[width=\imagewidth]{original/1929/Skener_20250318 (9).jpg}
@@ -269,13 +270,13 @@ inspirací.
 
 
 
-\clearpage
+% \clearpage
 
 1930, ročník 4, číslo 3, strana 37-40 \\
 \includegraphics[width=\imagewidth]{original/1930/Skener_20250316 (7).jpg}
 
 % v DOC je to jinak, ale takhle je to správně
-\includegraphics[width=\imagewidth]{original/1930/Skener_20250316 (8).jpg}
+\includegraphics[width=\imagewidth]{original/1930/Skener_20250407 (V).jpg}
 
 \includegraphics[width=\imagewidth]{original/1930/Skener_20250407 (2).jpg}
 
@@ -288,10 +289,11 @@ inspirací.
 
 \includegraphics[width=\imagewidth]{original/1930/Skener_20250316 (11).jpg}
 
-\vspace*{\baselineskip}
+\clearpage
 1930, ročník 4, číslo 8, strana 110 \\
 \includegraphics[width=\imagewidth]{original/1930/Skener_20250316 (14).jpg}
 
+\vspace*{\baselineskip}
 1930, ročník 4, číslo 8, strana 119 \\
 \includegraphics[width=\imagewidth]{original/1930/Skener_20250316 (13).jpg}
 
@@ -310,6 +312,7 @@ inspirací.
 
 \includegraphics[width=\imagewidth]{original/1931/Skener_20250315 (3).jpg}
 
+\vspace*{\baselineskip}
 1931, ročník 5, číslo 4, str. 51 \\
 \includegraphics[width=\imagewidth]{original/1931/Skener_20250315 (8).jpg}
 
@@ -317,6 +320,7 @@ inspirací.
 
 \includegraphics[width=\imagewidth]{original/1931/Skener_20250315 (5).jpg}
 
+\vspace*{\baselineskip}
 1931, ročník 5, číslo 5, str.64 \\
 \includegraphics[width=\imagewidth]{original/1931/Skener_20250315 (6).jpg}
 
@@ -327,11 +331,13 @@ inspirací.
 
 
 
-\clearpage
+% \clearpage
 
+\vspace*{\baselineskip}
 1932, ročník 6, číslo 1, strana 7 \\
 \includegraphics[width=\imagewidth]{original/1932/Skener_20250320 (5).jpg}
 
+\vspace*{\baselineskip}
 1932, ročník 6, číslo 3, strana 45 \\
 \includegraphics[width=\imagewidth]{original/1932/Skener_20250320 (6).jpg}
 
@@ -353,7 +359,7 @@ inspirací.
 
 
 
-\clearpage
+% \clearpage
 
 1934, ročník 8, číslo 3, strana 55-57 \\
 \includegraphics[width=\imagewidth]{original/1934/Skener_20250325 (8).jpg}
@@ -373,12 +379,13 @@ inspirací.
 
 \includegraphics[width=\imagewidth]{original/1934/Skener_20250325 (15).jpg}
 
+\vspace*{\baselineskip}
 1934, ročník 8, číslo 9, strana 140 \\
 \includegraphics[width=\imagewidth]{original/1934/Skener_20250325 (16).jpg}
 
 
 
-\clearpage
+% \clearpage
 
 1936, ročník 10, číslo 6, strana 110 \\
 \includegraphics[width=\imagewidth]{original/1936/Skener_20250323 (2).jpg}
@@ -394,7 +401,7 @@ inspirací.
 
 
 
-\clearpage
+% \clearpage
 
 1937, ročník 11, číslo 1, strana 41 \\
 \includegraphics[width=\imagewidth]{original/1937/Skener_20250325.jpg}
@@ -405,6 +412,7 @@ inspirací.
 1937, ročník 11, číslo 6, strana 141 \\
 \includegraphics[width=\imagewidth]{original/1937/Skener_20250325 (3).jpg}
 
+\vspace*{\baselineskip}
 1937, ročník 11, číslo 7, strana 148 \\
 \includegraphics[width=\imagewidth]{original/1937/Skener_20250325 (4).jpg}
 
@@ -416,14 +424,16 @@ inspirací.
 
 
 
-\clearpage
+% \clearpage
 
+\vspace*{\baselineskip}
 1938, ročník 12, číslo 1, strana 3 \\
 \includegraphics[width=\imagewidth]{original/1938/Skener_20250318.jpg}
 
 1938, ročník 12, číslo 4, strana 58 \\
 \includegraphics[width=\imagewidth]{original/1938/Skener_20250318 (2).jpg}
 
+\vspace*{\baselineskip}
 1938, ročník 12, číslo 4, strana 62 -- výňatek ze zápisu výboru \\
 \includegraphics[width=\imagewidth]{original/1938/Skener_20250318 (3).jpg}
 
@@ -442,7 +452,7 @@ inspirací.
 
 
 
-\clearpage
+% \clearpage
 
 1995, ročník 22, číslo 1, strana 2 \\
 \includegraphics[width=\imagewidth]{original/1995/Skener_20250320 (13).jpg}
@@ -471,9 +481,8 @@ odchyť si Anku nebo Báru v sokolovně nebo nás kontaktuj jinak, jestli na
 nás máš třeba WhatsApp.
 
 Děkujeme předem všem, kdo se rozhodnou zapojit!
-\vspace*{\baselineskip}
 
-\hfill Vzdělavatelka Anka Holanová a Bára Jeníková
+\signature{Vzdělavatelka Anka Holanová a Bára Jeníková}
 
 % zadní obálka
 \clearpage
