--- a/25-3/zpravy-2025-q2-standard.tex
+++ b/25-3/zpravy-2025-q2-standard.tex
@@ -21,7 +21,7 @@
 
 \vspace*{1cm}
 
-{\large ročník LI · číslo 3 · červen 2025}
+{\large ročník LI · číslo 3 · květen 2025}
 
 \vspace*{\fill}
 \end{center}
@@ -470,7 +470,7 @@ uveřejňovat podrobnosti k~jednotlivým akcím.
 Výsledky závodů, docházky, fota, dopisy atd. najdete na vývěskách
 v~sokolovně a na ní a též na www.sokol-liben.cz.
 
-\signature{Jiří Novák (Jirkan)}{místonáčelník\\tel.: 602 284 198}
+\signature{Jiří Novák (Jirkan)}{cvičitel\\tel.: 602 284 198}
 
 \vspace*{24pt}
 
@@ -605,8 +605,6 @@ Klidné prázdniny sokolovně, cvičencům, rodičům i dalším příznivcům p
 
 \signature{Jiří Novák (Jirkan)}{starosta\\tel.: 602 284 198}
 
-\vspace*{24pt}
-
 \post{JILM a Veverky}
 Jarní činnost turistických oddílů se nesla zejména v~duchu příprav
 nového tábořiště, kam se již toto léto chystáme. Zpočátku šlo hlavně
@@ -675,7 +673,7 @@ prázdninách.
 
 \signature{Tomáš Dragoun}{}
 
-\vspace*{24pt}
+\clearpage
 
 \post{Oddíl rodičů a dětí}
 Opět se nám blíží další školní rok. Hlásí se mnoho zájemců o~místa
@@ -701,7 +699,6 @@ Začínáme cvičit hned 1. 9. Přejeme krásné prázdniny.
 
 \signature{Jana, Dana, Jana a nově Martin}{}
 
-\clearpage
 \post{Oddíl předškolních dětí}
 Školní rok pomalu končí a některé děti už příští rok budou muset přejít
 do oddílu mladších žákyň a mladších žáků.
@@ -728,8 +725,6 @@ Bylo by hezké, kdybychom se všichni viděli na zakončovacím táboráku dne
 Přeji pohodové prázdniny.
 
 \signature{Dana Cejpková}{mobil: 606 551 223\\e-mail: dana.cejpkova@sokol-liben.cz}
-
-\vspace*{24pt}
 
 \post{Se Sokolem do divadla}
 Určitě jste zaznamenali, že rubrika \uv{Se Sokolem do divadla}
@@ -851,7 +846,7 @@ konání. Bližší informace naleznete zde:
 \href{https://prosokoly.sokol.eu/kultura-v-tyrsove-dome}{https://prosokoly.sokol.eu/kultura-v-tyrsove-dome}.
 Vstupné, většinou symbolické, je hrazeno těsně před vstupem na akci.}
 
-\subpost{Novinka -- Akademie věd}
+\subpost{Novinka – Akademie věd}
 Rád bych Vás seznámil s~poslední,
 spíše vzdělavatelskou než kulturní, novinkou. Sokol Libeň bude od června
 2025 dostávat výtisky periodik vydávaných Akademií věd ČR. I~když jsou
@@ -904,6 +899,7 @@ přátelský společenský večer v~roce 2026.
 \includegraphics[width=0.96\textwidth]{sibrinky.JPG}
 \end{center}
 
+\clearpage
 \post{Sokolská kapka krve}
 
 Projekt pokračuje od ledna t. r. 11. ročníkem. V~letošním roce nastala
@@ -918,8 +914,15 @@ Podrobnosti i za uplynulé ročníky nebo další informace lze dohledat na
 případně je rád sdělím osobně či na e-mailu
 \href{mailto:vit.jakoubek@sokol-liben.cz}{vit.jakoubek@sokol-liben.cz}.
 
+A nezapomeňte: 14.6. si připomínáme Mezinárodní den dárců krve!
+
 \signature{Vít Jakoubek}{koordinátor projektu}
 \vspace*{24pt}
+
+\begin{center}
+  \includegraphics[width=0.5\textwidth]{./sokolska_kapka_krve.jpg}
+  \end{center}
+  
 
 % zadní obálka
 \clearpage
